syntax = "proto3";

package stage.v1;


service StageService {
    rpc GenerateProof(GenerateProofRequest) returns (GenerateProofResponse) {}
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

enum Status {
    SUCCESS = 0;
    UNSPECIFIED = 1;
    COMPUTING = 2;
    INVALID_PARAMETER = 3;
    INTERNAL_ERROR = 4;
    SPLIT_ERROR = 5;
    PROVE_ERROR = 6;
    AGG_ERROR = 7;
    FINAL_ERROR = 8;
}

message BlockFileItem {
    string file_name = 1;
    bytes file_content = 2;
}

message GenerateProofRequest {
    uint64 chain_id = 1;
    uint64 timestamp = 2;
    string proof_id = 3;
    bytes elf_data = 4;
    repeated BlockFileItem block_data = 5;
    uint64 block_no = 6;
    uint32 seg_size = 7;
    string args = 8;
    string signature = 9; 
}

message GenerateProofResponse {
    uint32 status = 1;
    string error_message = 2;
    string proof_id = 3;
    string download_url = 4;
}

message GetStatusRequest {
    string proof_id = 1;
}

message GetStatusResponse {
    string proof_id = 1;
    uint32 status = 2;
    bytes proof_with_public_inputs = 3;
    string download_url = 4;
}